# NTSleuth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-ci.bat  build.bat  clean.bat
.github/workflows/: build.yml
include/: module_manager.h  os_info.h  syscall_extractor.h  types.h
include/analysis/: automated_param_resolver.h  phnt_database.h
include/disasm/: disassembler.h  instruction_analyzer.h
include/output/: c_header_formatter.h  formatter.h  json_formatter.h
include/symbols/: dbghelp_symbol_parser.h  dia_symbol_parser.h  pdb_downloader.h  symbol_parser.h  syscall_info.h
include/utils/: error.h  logger.h  pe_parser.h  string_utils.h
src/: main.cpp
src/analysis/: automated_param_resolver.cpp  phnt_database.cpp  syscall_patterns.cpp
src/core/: module_manager.cpp  os_info.cpp  syscall_extractor.cpp
src/disasm/: arm64_analyzer.cpp  disassembler.cpp  x64_analyzer.cpp  x86_analyzer.cpp
src/output/: c_header_formatter.cpp  json_formatter.cpp
src/symbols/: dbghelp_symbol_parser.cpp  dia_symbol_parser.cpp  pdb_downloader.cpp
src/utils/: logger.cpp  pe_parser.cpp  string_utils.cpp
